--- a/package.json
+++ b/package.json
@@ -9,9 +9,10 @@
     "lint": "turbo run lint",
     "test": "turbo run test",
     "clean": "turbo run clean && rm -rf node_modules",
-    "db:up": "docker-compose -f infra/docker-compose.yml up -d",
-    "db:down": "docker-compose -f infra/docker-compose.yml down",
-    "db:logs": "docker-compose -f infra/docker-compose.yml logs -f",
+    "db:up": "docker compose -f docker-compose.dev.yml up -d",
+    "db:down": "docker compose -f docker-compose.dev.yml down",
+    "db:logs": "docker compose -f docker-compose.dev.yml logs -f",
+    "db:reset": "docker compose -f docker-compose.dev.yml down -v && docker compose -f docker-compose.dev.yml up -d",
     "format": "prettier --write \"**/*.{ts,tsx,js,jsx,json,md}\""
   },
   "devDependencies": {
